# whisperer

./: .gitignore  AnalyzeDataset.ipynb  README.md  main.py  pyproject.toml  requirements.txt
.github/worflows/: integrate.yaml
.github/workflows/: integrate.yaml
config/: config.py
diarizer/: diaraizer.py  diarizer.py  embedder.py
notebooks/: AnalyzeDataset.ipynb  AnalyzeSilence.ipynb  TestDiarization.ipynb
paths/: __init__.py  dataset.py  default.py  speaker.py
utils/: paths.py  utils.py
whisperer/: audio_manipulate.py  data_cleaner.py  whisperer.py
whisperer_ml/: auto_labeler.py  converter.py  diarizer.py  main.py  transcriber.py
whisperer_ml/paths/: dataset.py  default.py  speaker.py
whisperer_ml/utils/: utils.py
