[tool.poetry]
name = "whisperer_ml"
version = "0.1.7"
description = "Go from raw audio to a text-audio dataset with OpenAI's Whisper"
authors = ["miguelvalente <miguelvalente@protonmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
whisperer_ml = "whisperer_ml.main:app"

[tool.poetry.dependencies]
python  = ">=3.9,<3.11"
librosa="0.8.0"
numpy="1.22.3"
pydub="0.25.1"
scipy="1.8.0"
torch="1.13.0"
torchaudio="0.13.0"
jupyter = "^1.0.0"
ffmpeg-python = "^0.2.0"
transformers = "^4.25.1"
tqdm = "^4.64.1"
pyannote-audio = "^2.1.1"
typer = "^0.7.0"
openai-whisper = "^20230124"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
